more semantic elements

--- a/index.html
+++ b/index.html
@@ -6,11 +6,45 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>project 3</title>
     <!-- <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css"> -->
-    <link rel="stylesheet" href="./assets/css/normalize.css">
+    <link rel="stylesheet" href="./assets/css/normalize.css" />
     <link rel="stylesheet" href="./assets/css/styles.css" />
     <link rel="icon" href="./assets/images/favicon.png" />
   </head>
   <body>
+    <a href="">homepage</a>
+    <a href="">about</a>
+    <a href="">contact</a>
+
     <h1>homepage</h1>
+
+    <!-- <h2>Heading Level 2</h2>
+    <h1>Heading Level 1</h1>
+    <h3>Heading Level 3</h3>
+    <h4>Heading Level 4</h4>
+    <h5>Heading Level 5</h5>
+    <h6>Heading Level 6</h6> -->
+
+    <p class="em">Lorem ipsum dolor sit amet.</p>
+    <p><em>Lorem ipsum dolor sit amet.</em></p>
+
+    <p class="text">this is an important text</p>
+    <p><strong>this is an important text</strong></p>
+
+    <div class="content-1">
+      <h3 class="sub-heading">Lorem, ipsum dolor.</h3>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum, suscipit debitis <strong>this bit of text is important too</strong>, sequi nihil quis assumenda autem consequuntur commodi quas rem accusamus? Excepturi cum deleniti praesentium aliquid?</p>
+    </div>
+
+
+
+    <div class="content-2">
+      <h3>Lorem ipsum dolor sit.</h3>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus reiciendis illum veritatis illo nulla mollitia blanditiis itaque nostrum ullam nam incidunt, minus tempore fugiat amet quaerat ipsum! Quod, voluptatibus laborum.</p>
+    </div>
+
+    <div class="content-3">
+      <h3>Lorem ipsum dolor sit amet consectetur.</h3>
+      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Obcaecati saepe dolorem voluptatum magnam cum neque consectetur sit exercitationem vitae id voluptates pariatur culpa molestiae, quas, nisi minima delectus dolor ipsam?</p>
+    </div>
   </body>
 </html>
