--- a/contact-us.html
+++ b/contact-us.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>project 3</title>
-    <!-- <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css"> -->
+    <title>project 3 | contact</title>
     <link rel="stylesheet" href="./assets/css/normalize.css" />
     <link rel="stylesheet" href="./assets/css/styles.css" />
     <link rel="icon" href="./assets/images/favicon.png" />
@@ -18,19 +17,10 @@
         <a href="./contact-us.html">contact</a>
       </nav>
     </header>
-    <h1>homepage</h1>
+    <h1>contact us</h1>
     <main>
-      <a href="https://www.google.com">google</a>
-      <!-- <section></section>
-      <article></article>
-      <aside></aside>
-      <div></div>
-      <span> </span> -->
-
+      <a href="https://www.google.com" target="_blank">google</a>
     </main>
-    <footer>
-      <a href="mailto:behshad@xeba.co.nz">email</a>
-      <a href="tel:0211234567">phone</a>
-    </footer>
+    <footer></footer>
   </body>
 </html>
