css selector combination etc

--- a/contact-us.html
+++ b/contact-us.html
@@ -19,7 +19,16 @@
     </header>
     <h1>contact us</h1>
     <main>
-      <a href="https://www.google.com" target="_blank">google</a>
+     <!-- <div class="something"></div>
+     <section class="something"></section>
+     <p id="text"></p> -->
+
+     <section class="wrapper">
+      <img src="" alt="">
+      <h2>Lorem ipsum dolor sit.</h2>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla architecto consectetur suscipit, numquam, iste nemo repellendus debitis earum quia amet animi eius nostrum consequuntur autem fuga laboriosam, odio culpa voluptatibus!</p>
+     </section>
+     
     </main>
     <footer></footer>
   </body>
