--- a/index.html
+++ b/index.html
@@ -18,19 +18,26 @@
         <a href="./contact-us.html">contact</a>
       </nav>
     </header>
-    <h1>homepage</h1>
+    <h1 class="heading" id="heading" style="background-color: black;">homepage</h1>
+
+    <div class="hotdog">
+      <h3>Lorem ipsum dolor sit.</h3>
+      <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, quas.</h5>
+      <p class="mustard">Lorem ipsum dolor sit amet.</p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium rem iste cum.</p>
+    </div>
+
+    <h3>i am also h3 element</h3>
+
+    <h5>another h5 element</h5>
+
+    <p class="mustard">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Blanditiis quas odit optio quasi veniam, doloremque totam temporibus neque a ratione nihil sapiente accusantium error atque accusamus tenetur maxime voluptatibus? Natus?</p>
+
     <main>
-      <a href="https://www.google.com">google</a>
-      <!-- <section></section>
-      <article></article>
-      <aside></aside>
-      <div></div>
-      <span> </span> -->
 
     </main>
     <footer>
-      <a href="mailto:behshad@xeba.co.nz">email</a>
-      <a href="tel:0211234567">phone</a>
+      <a href="emailto:someemailaddress#gmail.com">email</a>
     </footer>
   </body>
 </html>
